--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   provider: ^4.3.2+2
   intl: ^0.16.1
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
