--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,10 +79,13 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-  - family: Open Sans
-    fonts:
-      - asset: assets/fonts/OpenSans-Regular.ttf
-      - asset: assets/fonts/OpenSans-SemiBold.ttf
-        weight: 600
-      - asset: assets/fonts/OpenSans-Bold.ttf
-        weight: 700
+    - family: Space Mono
+      fonts:
+        - asset: assets/fonts/SpaceMono-Regular.ttf
+        - asset: assets/fonts/SpaceMono-Italic.ttf
+          style: italic
+        - asset: assets/fonts/SpaceMono-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/SpaceMono-BoldItalic.ttf
+          weight: 700
+          style: italic
